// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TrsTitleControlComponent should add a \`background-graphics\` class to the container when graphics are enabled 1`] = `
<pf-trs-title-control
  backgroundGraphicsEnabled={[Function Boolean]}
  color={[Function Object]}
  controlData={[Function Object]}
  graphicsColors={[Function Array]}
  mode="0"
  modeEnum={[Function Object]}
  titleChange={[Function EventEmitter]}
  titleInnerWidth={[Function String]}
>
  <div
    class="trs-title h-100 position-relative text-center background-graphics"
    pfmodeclassifierdirective=""
    style="width: 100%;"
  >
    <div
      aria-hidden="true"
      class="overlap graphic"
      pfstatementgraphicsdirective=""
    />
    <div
      aria-hidden="true"
      class="line graphic top-vertical"
      pfstatementgraphicsdirective=""
    />
    <div
      aria-hidden="true"
      class="line graphic top-horizontal"
      pfstatementgraphicsdirective=""
    />
    <div
      aria-hidden="true"
      class="line graphic circle top"
      pfstatementgraphicsdirective=""
    />
    <div
      aria-hidden="true"
      class="outer graphic"
      pfstatementgraphicsdirective=""
    >
      <div
        aria-hidden="true"
        class="inner graphic"
        pfstatementgraphicsdirective=""
      >
        <h2
          class="trs-statement-title d-inline-block mw-100 mh-100"
        >
          <pf-string-editor />
        </h2>
      </div>
    </div>
    <div
      aria-hidden="true"
      class="line graphic bottom-horizontal"
      pfstatementgraphicsdirective=""
    />
    <div
      aria-hidden="true"
      class="line graphic circle bottom"
      pfstatementgraphicsdirective=""
    />
    
  </div>
</pf-trs-title-control>
`;

exports[`TrsTitleControlComponent should set the innerTitleWidth as the width of the container 1`] = `
<pf-trs-title-control
  color={[Function Object]}
  controlData={[Function Object]}
  mode="0"
  modeEnum={[Function Object]}
  titleChange={[Function EventEmitter]}
  titleInnerWidth={[Function String]}
>
  <div
    class="trs-title h-100 position-relative text-center pb-4"
    pfmodeclassifierdirective=""
    style="width: 66.67%;"
  >
    <div
      aria-hidden="true"
      class="overlap graphic"
      pfstatementgraphicsdirective=""
    />
    <div
      aria-hidden="true"
      class="line graphic top-vertical"
      pfstatementgraphicsdirective=""
    />
    <div
      aria-hidden="true"
      class="line graphic top-horizontal"
      pfstatementgraphicsdirective=""
    />
    <div
      aria-hidden="true"
      class="line graphic circle top"
      pfstatementgraphicsdirective=""
    />
    <div
      aria-hidden="true"
      class="outer graphic"
      pfstatementgraphicsdirective=""
    >
      <div
        aria-hidden="true"
        class="inner graphic"
        pfstatementgraphicsdirective=""
      >
        <h2
          class="trs-statement-title d-inline-block mw-100 mh-100"
        >
          <pf-string-editor />
        </h2>
      </div>
    </div>
    <div
      aria-hidden="true"
      class="line graphic bottom-horizontal"
      pfstatementgraphicsdirective=""
    />
    <div
      aria-hidden="true"
      class="line graphic circle bottom"
      pfstatementgraphicsdirective=""
    />
    
  </div>
</pf-trs-title-control>
`;

exports[`TrsTitleControlComponent should show in edit mode 1`] = `
<pf-trs-title-control
  color={[Function Object]}
  controlData={[Function Object]}
  mode="0"
  modeEnum={[Function Object]}
  titleChange={[Function EventEmitter]}
  titleInnerWidth={[Function String]}
>
  <div
    class="trs-title h-100 position-relative text-center pb-4"
    pfmodeclassifierdirective=""
    style="width: 100%;"
  >
    <div
      aria-hidden="true"
      class="overlap graphic"
      pfstatementgraphicsdirective=""
    />
    <div
      aria-hidden="true"
      class="line graphic top-vertical"
      pfstatementgraphicsdirective=""
    />
    <div
      aria-hidden="true"
      class="line graphic top-horizontal"
      pfstatementgraphicsdirective=""
    />
    <div
      aria-hidden="true"
      class="line graphic circle top"
      pfstatementgraphicsdirective=""
    />
    <div
      aria-hidden="true"
      class="outer graphic"
      pfstatementgraphicsdirective=""
    >
      <div
        aria-hidden="true"
        class="inner graphic"
        pfstatementgraphicsdirective=""
      >
        <h2
          class="trs-statement-title d-inline-block mw-100 mh-100"
        >
          <pf-string-editor />
        </h2>
      </div>
    </div>
    <div
      aria-hidden="true"
      class="line graphic bottom-horizontal"
      pfstatementgraphicsdirective=""
    />
    <div
      aria-hidden="true"
      class="line graphic circle bottom"
      pfstatementgraphicsdirective=""
    />
    
  </div>
</pf-trs-title-control>
`;

exports[`TrsTitleControlComponent should show when in preview mode 1`] = `
<pf-trs-title-control
  color={[Function Object]}
  controlData={[Function Object]}
  mode={[Function Number]}
  modeEnum={[Function Object]}
  titleChange={[Function EventEmitter]}
  titleInnerWidth={[Function String]}
>
  <div
    class="trs-title h-100 position-relative text-center pb-4"
    pfmodeclassifierdirective=""
    style="width: 100%;"
  >
    <div
      aria-hidden="true"
      class="overlap graphic"
      pfstatementgraphicsdirective=""
    />
    <div
      aria-hidden="true"
      class="line graphic top-vertical"
      pfstatementgraphicsdirective=""
    />
    <div
      aria-hidden="true"
      class="line graphic top-horizontal"
      pfstatementgraphicsdirective=""
    />
    <div
      aria-hidden="true"
      class="line graphic circle top"
      pfstatementgraphicsdirective=""
    />
    <div
      aria-hidden="true"
      class="outer graphic"
      pfstatementgraphicsdirective=""
    >
      <div
        aria-hidden="true"
        class="inner graphic"
        pfstatementgraphicsdirective=""
      >
        <h2
          class="trs-statement-title d-inline-block mw-100 mh-100"
        >
          <pf-string-editor />
        </h2>
      </div>
    </div>
    <div
      aria-hidden="true"
      class="line graphic bottom-horizontal"
      pfstatementgraphicsdirective=""
    />
    <div
      aria-hidden="true"
      class="line graphic circle bottom"
      pfstatementgraphicsdirective=""
    />
    
  </div>
</pf-trs-title-control>
`;
